[package]
name = "gdextension"
version = "0.1.0"
edition = "2018"
authors = ["Jack Clayton"]
description = "A kernel for running Rust code interactively in a browser or VS Code"
license = "MIT"
readme = "README.md"
repository = "https://github.com/rustnote/rustkernel"
documentation = "https://rustnote.com"
homepage = "https://rustnote.com"
