[package]
name = "gdextension"
version = "0.0.1"
edition = "2018"
authors = ["Jack Clayton"]
description = "Rust bindings for GDExtension"
license = "MIT"
readme = "README.md"
repository = "https://github.com/jackos/gdextension"
documentation = "https://github.com/jackos/gdextension"
homepage = "https://github.com/jackos/gdextension"
